test sync async req, test progress bar

--- a/dashboard/core/templates/dashboard/index.html
+++ b/dashboard/core/templates/dashboard/index.html
@@ -88,5 +88,8 @@
       {% endfor %}
       </tbody>
     </table>
+    <p style="text-align: right;">
+      Last update: {{ last_update }}
+    </p>
   </div>
 {% endblock active_container %}
